--- a/Lesson_1/index.html
+++ b/Lesson_1/index.html
@@ -64,11 +64,11 @@
                 <div class="block_facts">
                 <p>Do you love cats?</p>
                     <div>
-                        <input type="radio" name="Cat" id="Yes">
+                        <input type="radio" name="Cat" value="Yes">
                         <label for="Yes">Yes</label>
                     </div>
                     <div>
-                        <input type="radio" name="Cat" id="No">
+                        <input type="radio" name="Cat" value="No">
                         <label for="No">Not</label>
                     </div>
 
