Lesson_2_Second_Kommit

--- a/Lesson_2/index.html
+++ b/Lesson_2/index.html
@@ -29,19 +29,19 @@
       <div class="local_menu">
        <i class="fa fa-user-lock"></i>
         <h4>PROFESIONALS</h4>
-        <hr>
+        <hr width=100% color= #d4d4d4  />
         <p>Lorem ipsum dolor sit amet consectetur elit.</p>
       </div>
       <div class="local_menu">
         <i class="fa fa-heart"></i>
         <h4>AMATEURS</h4>
-        <hr>
+        <hr width=100% color= #d4d4d4  />
         <p>Lorem ipsum dolor sit amet consectetur elit.</p>
       </div>
       <div class="local_menu">
         <i class="fa fa-headphones-alt"></i>
         <h4>FOR EVERYONE</h4>
-        <hr>
+        <hr width=100% color= #d4d4d4  />
         <p>Lorem ipsum dolor sit amet consectetur elit.</p>
       </div>
 
@@ -51,7 +51,7 @@
       <div class="local2_menu">
         <img class="second_block-picture" src="car.png" alt="Car" />
         <h4>RESPONSIVE EMAIL TEMPLATE</h4>
-        <hr>
+        <hr width=100% color= #d4d4d4  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis</p>
         <form class="form-second_block-button">
          <button class="second_block_button" type="submit" name="main_button">Read more</button>
@@ -60,7 +60,7 @@
       <div class="local2_menu">
         <img class="second_block-picture" src="Rest.png" alt="Rest" />
         <h4>FULLY COMPATIBLE TEMPLATE</h4>
-        <hr>
+        <hr width=100% color= #d4d4d4  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis</p>
         <form class="form-second_block-button">
          <button class="second_block_button" type="submit" name="main_button">Read more</button>
@@ -71,7 +71,7 @@
       <div class="local3_menu">
        <i class="fa fa-life-ring"></i>
         <h4>FULLY SUPPORTED TEMPLATE</h4>
-        <hr width=100% color= linear-gradient(30deg, grey, white);  />
+        <hr width=100% color= #d4d4d4  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem commodo vitae. Ut semper lacus. Suspendisse convallis vel tellus at consectetur. Aenean risus arcu.</p>
         <form class="form-third_block-button">
          <button class="third_block_button" type="submit" name="main_button">Read more</button>
@@ -79,12 +79,74 @@
       </div>
     </div>
 
+    <div class="four_block">
+      <div class="local4_menu">
+        <img class="fourth_block-picture" src="Traffic.png" alt="Traffic light" />
+        <h4>FULLY LAYERED PSD</h4>
+        <hr width=100% color= #d4d4d4  />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <a class = "Check_this_out" href"#">Check this out ></a>
+      </div>
+      <div class="local4_menu">
+        <img class="fourth_block-picture" src="Japan.png" alt="Japan girl" />
+        <h4>FULL COMPATIBILITY</h4>
+        <hr width=100% color= #d4d4d4  />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <a class = "Check_this_out" href"#">Check this out ></a>
+      </div>
+      <div class="local4_menu">
+        <img class="fourth_block-picture" src="Snikers.png" alt="Snikers" />
+        <h4>VERY GREAT MODULES</h4>
+        <hr width=100% color= #d4d4d4  />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <a class = "Check_this_out" href"#">Check this out ></a>
+      </div>
+    </div>
+
+    <div class="fifth_block">
+      <div class="local5_menu">
+        <h4>SEND IT NOW</h4>
+        <hr width=100% color= #d4d4d4  />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</p>
+        <form class="form-second_block-button">
+         <button class="second_block_button" type="submit" name="main_button">Read more</button>
+        </form>
+      </div>
+      <div class="local5_menu">
+
+        <h4>VERY NICE TO SEE</h4>
+        <hr width=100% color= #d4d4d4  />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</p>
+        <form class="form-second_block-button">
+         <button class="second_block_button" type="submit" name="main_button">Read more</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="sixth_block">
+      <div class="local6_menu">
+      <img class="sixth_block-picture" src="Paparazzi.png" alt="Paparazzi" />
+    </div>
+      <div class="local6_menu">
+
+        <h4>JUST FOR YOU ON THEMEFOREST</h4>
+        <hr width=100% color= #d4d4d4  />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</p>
+        <form class="form-sixth_block-button">
+         <button type="submit" name="main_button">Read more</button>
+        </form>
+
+      </div>
+    </div>
+
+    <div class="">
+
+    </div>
+
+
+
 
   </div>
-
-
-
-
 
 </body>
 
