Lesson_2_Third_Kommit

--- a/Lesson_2/index.html
+++ b/Lesson_2/index.html
@@ -27,21 +27,21 @@
   <div class="main_content">
     <div class="first_block">
       <div class="local_menu">
-       <i class="fa fa-user-lock"></i>
+       <img class="first_block-picture" src="Users.png" alt="Users" />
         <h4>PROFESIONALS</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=70% color = #E8E8E9  />
         <p>Lorem ipsum dolor sit amet consectetur elit.</p>
       </div>
       <div class="local_menu">
-        <i class="fa fa-heart"></i>
+        <img class="first_block-picture" src="Heart.png" alt="Heart" />
         <h4>AMATEURS</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=70% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet consectetur elit.</p>
       </div>
       <div class="local_menu">
-        <i class="fa fa-headphones-alt"></i>
+        <img class="first_block-picture" src="HeadPhones.png" alt="HeadPhones" />
         <h4>FOR EVERYONE</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=70% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet consectetur elit.</p>
       </div>
 
@@ -51,7 +51,7 @@
       <div class="local2_menu">
         <img class="second_block-picture" src="car.png" alt="Car" />
         <h4>RESPONSIVE EMAIL TEMPLATE</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis</p>
         <form class="form-second_block-button">
          <button class="second_block_button" type="submit" name="main_button">Read more</button>
@@ -60,7 +60,7 @@
       <div class="local2_menu">
         <img class="second_block-picture" src="Rest.png" alt="Rest" />
         <h4>FULLY COMPATIBLE TEMPLATE</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis</p>
         <form class="form-second_block-button">
          <button class="second_block_button" type="submit" name="main_button">Read more</button>
@@ -69,9 +69,9 @@
     </div>
     <div class="third_block">
       <div class="local3_menu">
-       <i class="fa fa-life-ring"></i>
+       <img class="third_img" src="Ring.png" alt="Ring" />
         <h4>FULLY SUPPORTED TEMPLATE</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem commodo vitae. Ut semper lacus. Suspendisse convallis vel tellus at consectetur. Aenean risus arcu.</p>
         <form class="form-third_block-button">
          <button class="third_block_button" type="submit" name="main_button">Read more</button>
@@ -83,21 +83,21 @@
       <div class="local4_menu">
         <img class="fourth_block-picture" src="Traffic.png" alt="Traffic light" />
         <h4>FULLY LAYERED PSD</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <a class = "Check_this_out" href"#">Check this out ></a>
       </div>
       <div class="local4_menu">
         <img class="fourth_block-picture" src="Japan.png" alt="Japan girl" />
         <h4>FULL COMPATIBILITY</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <a class = "Check_this_out" href"#">Check this out ></a>
       </div>
       <div class="local4_menu">
         <img class="fourth_block-picture" src="Snikers.png" alt="Snikers" />
         <h4>VERY GREAT MODULES</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <a class = "Check_this_out" href"#">Check this out ></a>
       </div>
@@ -105,17 +105,20 @@
 
     <div class="fifth_block">
       <div class="local5_menu">
+        <img class="first_block-picture" src="Telegram1.png" alt="Telegram" />
         <h4>SEND IT NOW</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</p>
         <form class="form-second_block-button">
          <button class="second_block_button" type="submit" name="main_button">Read more</button>
         </form>
       </div>
       <div class="local5_menu">
-
+        <div  class="pancil_img">
+        <img class="pancil_block-picture" src="pancil.png" alt="Pancil" />
+      </div>
         <h4>VERY NICE TO SEE</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada sodales risus, a adipiscing lorem.</p>
         <form class="form-second_block-button">
          <button class="second_block_button" type="submit" name="main_button">Read more</button>
@@ -124,13 +127,11 @@
     </div>
 
     <div class="sixth_block">
-      <div class="local6_menu">
       <img class="sixth_block-picture" src="Paparazzi.png" alt="Paparazzi" />
-    </div>
       <div class="local6_menu">
 
         <h4>JUST FOR YOU ON THEMEFOREST</h4>
-        <hr width=100% color= #d4d4d4  />
+        <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</p>
         <form class="form-sixth_block-button">
          <button type="submit" name="main_button">Read more</button>
