Lesson2_Kommit_wed

--- a/Lesson_2/index.html
+++ b/Lesson_2/index.html
@@ -12,6 +12,8 @@
 
 <body>
   <div class="header">
+    <img class="header-picture" src="Elena.png" alt="Elena" />
+
     <ul class="ul_menu">
 
       <li><a class = "ButtonH" href"#">HOME</a></li>
@@ -19,6 +21,12 @@
       <li><a class = "ButtonH" href"#">FEATURES</a></li>
       <li ><a class = "ButtonH" href"#">CONTACT</a></li>
     </ul>
+    <br>
+    <h1>HAVE A GOOD DAY</h1>
+    <div class="header_text">
+      <hr color="grey"><p>JUST FOR YOU ON THEMEFOREST</p><hr color="grey">
+    </div>
+
 <form class="form-main-button">
  <button class="main_button" type="submit" name="main_button">GET YOUR COPY NOW</button>
 </form>
@@ -140,7 +148,18 @@
       </div>
     </div>
 
-    <div class="">
+    <div class="footer">
+      <div class="top_footer">
+          <h5>THIS TEMPLATE WAS FEATURED ON</h5>
+          <hr>
+      </div>
+
+      <div class="footer_logo">
+        <img class="footer_logo-picture" src="TechCrunch.png" alt="TechCrunch" />
+        <img class="footer_logo-picture" src="Promail.png" alt="Promail" />
+        <img class="footer_logo-picture" src="Mashable.png" alt="Mashable" />
+        <img class="footer_logo-picture" src="atlaspix.png" alt="atlaspix" />
+      </div>
 
     </div>
 
