--- a/Lesson_2/index.html
+++ b/Lesson_2/index.html
@@ -151,18 +151,23 @@
     <div class="footer">
       <div class="top_footer">
           <h5>THIS TEMPLATE WAS FEATURED ON</h5>
-          <hr>
+          <hr color = "white" width = 25%>
       </div>
 
       <div class="footer_logo">
         <img class="footer_logo-picture" src="TechCrunch.png" alt="TechCrunch" />
         <img class="footer_logo-picture" src="Promail.png" alt="Promail" />
         <img class="footer_logo-picture" src="Mashable.png" alt="Mashable" />
-        <img class="footer_logo-picture" src="atlaspix.png" alt="atlaspix" />
+        <img class="footer4_logo-picture" src="atlaspix.png" alt="atlaspix" />
       </div>
-
     </div>
 
+    <div class="bottom_footer">
+      <div class="left_bootom_footer">
+        <h6>Elenea</h6>
+        <p>copyright 2013 Unsibscribe here </p>
+      </div>
+    </div>
 
 
 
