Kommit_without_flex_elements

--- a/Lesson_2/index.html
+++ b/Lesson_2/index.html
@@ -164,9 +164,16 @@
 
     <div class="bottom_footer">
       <div class="left_bootom_footer">
-        <h6>Elenea</h6>
-        <p>copyright 2013 Unsibscribe here </p>
+         <p><h6>Elenea © </h6> copyright 2013 Unsibscribe here </p>
       </div>
+
+      <div class="footer_icons">
+        <img class="footer_icons-picture" src="google_plus.png" alt="google_plus" />
+        <img class="footer_icons-picture" src="facebook.png" alt="facebook" />
+        <img class="footer_icons-picture" src="twitter.png" alt="twitter" />
+      </div>
+
+
     </div>
 
 
