--- a/Lesson_2/index.html
+++ b/Lesson_2/index.html
@@ -37,7 +37,7 @@
       <div class="local_menu">
        <img class="first_block-picture" src="Users.png" alt="Users" />
         <h4>PROFESIONALS</h4>
-        <hr width=70% color = #E8E8E9  />
+        <hr width=70% color = #E8E8E9 >
         <p>Lorem ipsum dolor sit amet consectetur elit.</p>
       </div>
       <div class="local_menu">
@@ -75,6 +75,7 @@
         </form>
       </div>
     </div>
+
     <div class="third_block">
       <div class="local3_menu">
        <img class="third_img" src="Ring.png" alt="Ring" />
@@ -93,21 +94,21 @@
         <h4>FULLY LAYERED PSD</h4>
         <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <a class = "Check_this_out" href"#">Check this out ></a>
+        <a class = "Check_this_out" href="#">Check this out ></a>
       </div>
       <div class="local4_menu">
         <img class="fourth_block-picture" src="Japan.png" alt="Japan girl" />
         <h4>FULL COMPATIBILITY</h4>
         <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <a class = "Check_this_out" href"#">Check this out ></a>
+        <a class = "Check_this_out" href="#">Check this out ></a>
       </div>
       <div class="local4_menu">
         <img class="fourth_block-picture" src="Snikers.png" alt="Snikers" />
         <h4>VERY GREAT MODULES</h4>
         <hr width=100% color= #E8E8E9  />
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <a class = "Check_this_out" href"#">Check this out ></a>
+        <a class = "Check_this_out" href="#">Check this out ></a>
       </div>
     </div>
 
@@ -150,15 +151,17 @@
 
     <div class="footer">
       <div class="top_footer">
+          <img class="top_footer-picture" src="star.png" alt="star" />
           <h5>THIS TEMPLATE WAS FEATURED ON</h5>
-          <hr color = "white" width = 25%>
+
       </div>
+      <hr color = "white" width = 30%>
 
       <div class="footer_logo">
         <img class="footer_logo-picture" src="TechCrunch.png" alt="TechCrunch" />
         <img class="footer_logo-picture" src="Promail.png" alt="Promail" />
         <img class="footer_logo-picture" src="Mashable.png" alt="Mashable" />
-        <img class="footer4_logo-picture" src="atlaspix.png" alt="atlaspix" />
+        <img class="footer_logo-picture" src="atlaspix.png" alt="atlaspix" />
       </div>
     </div>
 
