WE_ARE_MODEST_Kommit

--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -7,6 +7,7 @@
   <title>Modest</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/brands.css" integrity="sha384-1KLgFVb/gHrlDGLFPgMbeedi6tQBLcWvyNUN+YKXbD7ZFbjX6BLpMDf0PJ32XJfX" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/fontawesome.css" integrity="sha384-jLuaxTTBR42U2qJ/pm4JRouHkEDHkVqH0T1nyQXn1mZ7Snycpf6Rl25VBNthU4z0" crossorigin="anonymous">
 </head>
@@ -37,9 +38,11 @@
         <button class="main_button" type="submit" name="main_button">VIDEO TOUR</button>
       </form>
     </div>
-      
+
   </div>
   <div class="content_first">
+    <div class="center_first">
+
     <div class="main_headline">
       <div class="grey_box"></div>
       <h3>WE ARE MODEST.</h3>
@@ -50,11 +53,11 @@
            <br>
            <p>Phasellus sollicitudin ante eros ornare, <b>sit amet luctus lorem semper</b>. Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget, vel sodales arcu vesibulum </p>
            <div class="social_icons">
-             <i class="fab fa-facebook-f"></i>
-             <i class="fab fa-twitter"></i>
-             <i class="fab fa-google"></i>
-             <i class="fab fa-basketball-ball"></i>
-             <i class="fab fa-behance"></i>
+             <a href="#"><i class="fab fa-facebook-f"></i></a>
+						 <a href="#"><i class="fab fa-twitter"></i></a>
+						 <a href="#"><i class="fab fa-google"></i></a>
+						 <a href="#"><i class="fas fa-basketball-ball"></i></a>
+						 <a href="#"><i class="fab fa-behance"></i></a>
 
            </div>
         </div>
@@ -63,28 +66,37 @@
             <div class="square_block">
                 <p>01</p>
             </div>
-            <h5>DEDICATION TO THE CUSTOMERS</h5>
-            <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper riss.</p>
+            <div class="content_right_text_block">
+              <h5>DEDICATION TO THE CUSTOMERS</h5>
+              <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper riss.</p>
+            </div>
+
           </div>
-          <div class="second_right_text_block">
+          <div class="first_right_text_block">
             <div class="square_block">
                 <p>02</p>
             </div>
+            <div class="content_right_text_block">
             <h5>WORKING CLOSELY WITH OUR CLIENTS</h5>
             <p>Sed blandit nisi urna, sed pellentesque enim consectetur vitae. Suspendisse ut vehicula nibh.</p>
           </div>
-          <div class="third_right_text_block">
+          </div>
+          <div class="first_right_text_block">
             <div class="square_block">
                 <p>03</p>
             </div>
+            <div class="content_right_text_block">
             <h5>INCREASE HAPPINESS</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipising elit. Nulla eleifend laoreet euismod.</p>
           </div>
+          </div>
         </div>
     </div>
-    <hr>
-  </div>
 
+    </div>
+
+  </div>
+<hr>
 
   <div class="content_second">
     <div class="main_headline">
