MEET_THE_TEAM_Kommit

--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -99,6 +99,7 @@
 <hr>
 
   <div class="content_second">
+    <div class="center_second">
     <div class="main_headline">
       <div class="grey_box"></div>
       <h3>MEET THE TEAM.</h3>
@@ -106,20 +107,37 @@
     <div class="photos_box">
       <div class="people_photo">
         <img src="img/firstman.png" alt="firstman"/>
+        <div class="social_icons_2">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
         <div class="horisontal_grey_box">
+
           <h6>GLORIA BROMLEY</h6>
           <p>CEO and Founder</p>
         </div>
       </div>
       <div class="people_photo">
         <img src="img/second_man.png" alt="second_man"/>
+        <div class="social_icons_2">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
         <div class="horisontal_grey_box">
+
           <h6>PAUL TORRES</h6>
           <p>Head of Development</p>
         </div>
       </div>
       <div class="people_photo">
         <img src="img/third_girl.png" alt="third_girl"/>
+        <div class="social_icons_2">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
         <div class="horisontal_grey_box">
           <h6>JUDITH GILLETTE</h6>
           <p>Graphic Designer</p>
@@ -127,11 +145,18 @@
       </div>
       <div class="people_photo">
         <img src="img/fourth_man.png" alt="fourth_man"/>
+        <div class="social_icons_2">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
         <div class="horisontal_grey_box">
+
           <h6>DELORES REED</h6>
           <p>Client Service Director</p>
         </div>
       </div>
+    </div>
     </div>
   </div>
 
