Without_STAY_IN_TOUCH_Kommit

--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -18,13 +18,13 @@
       <div class="top_header">
         <img class="header-picture" src="img/logo_modest.png" alt="Header img" />
         <ul class="ul_menu">
-          <li><a class = "ButtonH" href"#">HOME</a></li>
-          <li><a class = "ButtonH" href"#">ABOUT</a></li>
-          <li><a class = "ButtonH" href"#">WORK</a></li>
-          <li><a class = "ButtonH" href"#">TEAM</a></li>
-          <li><a class = "ButtonH" href"#">SERVICES</a></li>
-          <li><a class = "ButtonH" href"#">FEATURES</a></li>
-          <li><a class = "ButtonH" href"#">CONTACT</a></li>
+          <li><a  href="#">HOME</a></li>
+          <li><a  href="#">ABOUT</a></li>
+          <li><a  href="#">WORK</a></li>
+          <li><a  href="#">TEAM</a></li>
+          <li><a  href="#">SERVICES</a></li>
+          <li><a  href="#">FEATURES</a></li>
+          <li><a  href="#">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -161,99 +161,157 @@
   </div>
 
   <div class="content_third">
+    <div class="center_third">
+
     <div class="main_headline">
       <div class="grey_box"></div>
       <h3>LOVELY WORK.</h3>
     </div>
-    <div class="photos_box">
+    <div class="photos_box_2">
       <div class="lovely_photo">
         <img src="img/snow.png" alt="snow"/>
+
+        <div class="lovely_photo_hover">
+          <a href="#"><i class="fas fa-plus"></i></a>
+          <div class="grey_lovely_box">
+            <p>PARTNERSHIP GUIDLINE</p>
+          </div>
+        </div>
 
       </div>
       <div class="lovely_photo">
         <img src="img/skate.png" alt="skate"/>
 
+        <div class="lovely_photo_hover">
+          <a href="#"><i class="fas fa-plus"></i></a>
+          <div class="grey_lovely_box">
+            <p>SKATING SITE</p>
+          </div>
+        </div>
       </div>
       <div class="lovely_photo">
         <img src="img/road.png" alt="road"/>
 
+        <div class="lovely_photo_hover">
+          <a href="#"><i class="fas fa-plus"></i></a>
+          <div class="grey_lovely_box">
+            <p>DESERT ROAD</p>
+          </div>
+        </div>
       </div>
       <div class="lovely_photo">
         <img src="img/ships.png" alt="ships"/>
 
-      </div>
+        <div class="lovely_photo_hover">
+          <a href="#"><i class="fas fa-plus"></i></a>
+          <div class="grey_lovely_box">
+            <p>SHIP's BAY</p>
+          </div>
+        </div>
+        </div>
       <div class="lovely_photo">
         <img src="img/mountain.png" alt="mountain"/>
 
+        <div class="lovely_photo_hover">
+          <a href="#"><i class="fas fa-plus"></i></a>
+          <div class="grey_lovely_box">
+            <p>PERFECT MOUNTAIN</p>
+          </div>
+        </div>
       </div>
       <div class="lovely_photo">
         <img src="img/bird.png" alt="bird"/>
 
+        <div class="lovely_photo_hover">
+          <a href="#"><i class="fas fa-plus"></i></a>
+          <div class="grey_lovely_box">
+            <p>BIRD ON SHIP</p>
+          </div>
+        </div>
       </div>
     </div>
     <form class="form-main-button">
       <button class="main_button" type="submit" name="main_button">SHOW ME MORE</button>
     </form>
+
+  </div>
   </div>
 
-  <div class="content_fourth">
+
+
+  <div class="wrapper grid">
     <div class="main_headline">
       <div class="grey_box"></div>
       <h3>WHAT WE DO.</h3>
     </div>
-    <div class="information_box">
-      <div class="mini_information_box">
+    <div class="row">
 
-        <i class="fab fa-cogs"></i>
+      <div class="col">
+        <div class="content">
+
+        <a href="#"><i class="fas fa-cogs"></i></a>
         <h5>EASY THEME SETUP</h5>
         <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
       </div>
-      <div class="mini_information_box">
-
-        <i class="fab fa-pencil-alt"></i>
+      </div>
+      <div class="col">
+        <div class="content">
+        <a href="#"><i class="fas fa-pencil-alt"></i></a>
         <h5>PIXEL PERFECT DESIGN</h5>
         <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
       </div>
-      <div class="mini_information_box">
-
-
+      </div>
+      <div class="col">
+        <div class="content">
+          <a href="#"><i class="fas fa-mobile-alt"></i></a>
         <h5>RESPONSIVE DISPLAY</h5>
         <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
       </div>
-      <div class="mini_information_box">
-
-
+      </div>
+      <div class="col">
+        <div class="content">
+          <a href="#"><i class="far fa-clock"></i></a>
         <h5>24/7 SUPPORT</h5>
         <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
       </div>
-      <div class="mini_information_box">
-
-
+      </div>
+      <div class="col">
+        <div class="content">
+          <a href="#"><i class="fas fa-cogs"></i></a>
         <h5>EASY THEME SETUP</h5>
         <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
       </div>
-      <div class="mini_information_box">
-
-
+      </div>
+      <div class="col">
+        <div class="content">
+          <a href="#"><i class="fas fa-pencil-alt"></i></a>
         <h5>PIXEL PERFECT DESIGN</h5>
         <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
       </div>
-      <div class="mini_information_box">
-
-
+      </div>
+      <div class="col">
+        <div class="content">
+          <a href="#"><i class="fas fa-mobile-alt"></i></a>
         <h5>RESPONSIVE DISPLAY</h5>
         <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
       </div>
-      <div class="mini_information_box">
-
-
+      </div>
+      <div class="col">
+        <div class="content">
+          <a href="#"><i class="far fa-clock"></i></a>
         <h5>24/7 SUPPORT</h5>
         <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
       </div>
-    </div>
+</div>
+
+  </div>
   </div>
 
+
   <div class="content_fifth">
+    <div class="wrapper grid_5">
+
+
     <div class="main_headline">
       <div class="grey_box"></div>
       <h3>FEATURES.</h3>
@@ -282,6 +340,8 @@
       </div>
     </div>
   </div>
+  </div>
+
 
   <div class="content_sixth">
     <div class="main_headline">
@@ -301,15 +361,15 @@
       <section class="personal-information">
         <div class="block">
           <div class="name">
-          <label for="surname">YOUR NAME</label>
+          <label>YOUR NAME</label>
           <input required type="text">
           </div>
           <div class="email">
-          <label for="name">YOUR EMAIL</label>
+          <label>YOUR EMAIL</label>
           <input required type="email">
           </div>
           <div class="message">
-            <legend>YOUR MESSAGE</legend>
+            <label>YOUR MESSAGE</label>
             <textarea></textarea>
           </div>
         </div>
