Kommit_Without_Footer

--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -344,15 +344,18 @@
 
 
   <div class="content_sixth">
+    <div class="wrapper">
     <div class="main_headline">
       <div class="grey_box"></div>
       <h3>STAY IN TOUCH.</h3>
     </div>
+    </div>
     <div class="map">
       <img src="img/map.png" alt="map"/>
     </div>
+    <div class="wrapper grid_6">
     <div class="text_to_sixth_block">
-      <h3>CONTACT INFORMATION</h3>
+      <h5>CONTACT INFORMATION</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie dravida.</p>
       <br>
       <p>Cras fermentum elit quis manga congue, <b>vel sodales</b> arcu vestibulum. Nunc lobortis dui manga, quis dapibus lacus</p>
@@ -361,23 +364,25 @@
       <section class="personal-information">
         <div class="block">
           <div class="name">
-          <label>YOUR NAME</label>
+          <p>YOUR NAME</p>
           <input required type="text">
           </div>
           <div class="email">
-          <label>YOUR EMAIL</label>
+          <p>YOUR EMAIL</p>
           <input required type="email">
           </div>
-          <div class="message">
-            <label>YOUR MESSAGE</label>
-            <textarea></textarea>
-          </div>
         </div>
-        <form class="form-main-button">
-          <button class="main_button" type="submit" name="main_button">SEND MASSAGE</button>
-        </form>
+          <div class="message">
+            <p>YOUR MESSAGE</p>
+            <textarea></textarea>
+            <form class="form-main-button_6">
+              <button  type="submit">SEND MASSAGE</button>
+            </form>
+          </div>
+
       </section>
     </div>
+  </div>
   </div>
 
   <div class="footer">
