--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -384,19 +384,18 @@
     </div>
   </div>
   </div>
+<div class="footer">
 
-  <div class="footer">
+  <div class="wrapper flex">
       <p>© Copyright 2014 by PSD Booster. All Rights Reserved.</p>
       <div class="icons_footer">
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-facebook-f"></i>
-        <i class="fab fa-skype"></i>
-        <i class="fab fa-behance"></i>
-        <i class="fab fa-linkedin-in"></i>
-
-
-
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-skype"></i></a>
+        <a href="#"><i class="fab fa-behance"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
       </div>
+  </div>
   </div>
 </body>
 
