--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -30,7 +30,11 @@
     </div>
   </div>
   <div class="banner">
+    <div class="wrapper_b flex_container">
+
     <div class="banner_content">
+
+
       <h3>WELCOME TO OUR MARKETPLACE</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nisi metus? tristique ndolor non, ornare sagitis dolor. Nulla vestibulu lacus ...</p>
       <form class="form-main-button">
@@ -38,8 +42,10 @@
         <button class="main_button" type="submit" name="main_button">VIDEO TOUR</button>
       </form>
     </div>
+</div>
 
   </div>
+
   <div class="content_first">
     <div class="center_first">
 
