TWO_Responsive_Block

--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -17,6 +17,7 @@
     <div class="top_container">
       <div class="top_header">
         <img class="header-picture" src="img/logo_modest.png" alt="Header img" />
+
         <ul class="ul_menu">
           <li><a  href="#">HOME</a></li>
           <li><a  href="#">ABOUT</a></li>
@@ -26,6 +27,10 @@
           <li><a  href="#">FEATURES</a></li>
           <li><a  href="#">CONTACT</a></li>
         </ul>
+
+        <div class="mobmenu">
+          <i class="fa fa-bars"></i>
+        </div>
       </div>
     </div>
   </div>
@@ -403,6 +408,9 @@
       </div>
   </div>
   </div>
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ <script src="js/index.js"></script>
 </body>
 
 </html>
