--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -249,6 +249,8 @@
   </div>
 
 
+<div class="content_fourth">
+
 
   <div class="wrapper grid">
     <div class="main_headline">
@@ -317,9 +319,11 @@
 
   </div>
   </div>
-
+</div>
 
   <div class="content_fifth">
+    <div class="center_fifth">
+
     <div class="wrapper grid_5">
 
 
@@ -351,6 +355,8 @@
       </div>
     </div>
   </div>
+
+</div>
   </div>
 
 
