Pixel_Perfect_Kommit

--- a/Lesson_4/index.html
+++ b/Lesson_4/index.html
@@ -39,7 +39,7 @@
         <h3>WELCOME TO OUR MARKETPLACE</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nisi metus? tristique ndolor non, ornare sagitis dolor. Nulla vestibulu lacus ...</p>
         <form class="form-main-button">
-          <button class="main_button" type="submit" name="main_button">VIEW MORE</button>
+          <button class="main_button" type="submit" name="main_button">view more</button>
           <button class="main_button" type="submit" name="main_button">VIDEO TOUR</button>
         </form>
       </div>
@@ -360,7 +360,7 @@
               <p>YOUR MESSAGE</p>
               <textarea></textarea>
               <form class="form-main-button_6">
-                <button  type="submit">SEND MASSAGE</button>
+                <button  type="submit"><p>SEND MASSAGE</p></button>
               </form>
             </div>
           </section>
