--- a/Marvel/index.html
+++ b/Marvel/index.html
@@ -418,11 +418,13 @@
           <p>23 JULY 2015</p>
         </div>
         <h6>Single Image Post</h6>
-        <p>By Admin . In Logo . 1 Comment</p>
-        <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
-        <form class="form-main-button">
-          <button type="submit">READ MORE</button>
-        </form>
+        <div class="text_to_ten_block">
+          <p>By Admin . In Logo . 1 Comment</p>
+          <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
+        </div>
+        <div class="link_ten_block">
+          <a href="#">READ MORE</a>
+        </div>
       </div>
       <div class="similar_news_photo_block">
         <img class="news_photo" src="img/news-second.png" alt="news photo" />
@@ -430,11 +432,13 @@
           <p>23 JULY 2015</p>
         </div>
         <h6>Single Image Post</h6>
-        <p>By Admin . In Logo . 1 Comment</p>
-        <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
-        <form class="form-main-button">
-          <button type="submit">READ MORE</button>
-        </form>
+        <div class="text_to_ten_block">
+          <p>By Admin . In Logo . 1 Comment</p>
+          <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
+        </div>
+        <div class="link_ten_block">
+          <a href="#">READ MORE</a>
+        </div>
       </div>
       <div class="similar_news_photo_block">
         <img class="news_photo" src="img/news-third.png" alt="news photo" />
@@ -442,11 +446,14 @@
           <p>23 JULY 2015</p>
         </div>
         <h6>Single Image Post</h6>
-        <p>By Admin . In Logo . 1 Comment</p>
-        <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
-        <form class="form-main-button">
-          <button type="submit">READ MORE</button>
-        </form>
+        <div class="text_to_ten_block">
+          <p>By Admin . In Logo . 1 Comment</p>
+          <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
+        </div>
+        <div class="link_ten_block">
+          <a href="#">READ MORE</a>
+        </div>
+
       </div>
       <div class="similar_news_photo_block">
         <img class="news_photo" src="img/news-fourth.png" alt="news photo" />
@@ -454,11 +461,13 @@
           <p>23 JULY 2015</p>
         </div>
         <h6>Single Image Post</h6>
-        <p>By Admin . In Logo . 1 Comment</p>
-        <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
-        <form class="form-main-button">
-          <button type="submit">READ MORE</button>
-        </form>
+        <div class="text_to_ten_block">
+          <p>By Admin . In Logo . 1 Comment</p>
+          <p>Lorem Ipsum is simply dummy text of the iinting and typesette industry lorem Ipsum has...</p>
+        </div>
+        <div class="link_ten_block">
+          <a href="#">READ MORE</a>
+        </div>
       </div>
     </div>
   </div>
@@ -489,43 +498,52 @@
     </div>
   </div>
 
-  <div class="footer">
 
-    <div class="footer_map">
-      <p>Locate us on map &or;</p>
-    </div>
-
-    <div class="main_content_footer">
-      <div class="flang_content_footer">
-        <div class="footer_circle">
-
+    <div class="footer">
+      <div class="footer_map_bacground">
+        <div class="footer_map">
+          <p>Locate us on map &or;</p>
         </div>
-        <p>Phone :(999) 000-122-233</p>
       </div>
 
-      <div class="footer_social_icons">
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-skype"></i></a>
-        <a href="#"><i class="fab fa-pinterest"></i></a>
-        <a href="#"><i class="fab fa-apple"></i></a>
-      </div>
+      <div class="main_content_footer_background">
+        <div class="main_content_footer">
+          <div class="flang_content_footer">
+            <div class="footer_circle">
+              <i class="fas fa-mobile-alt"></i>
+            </div>
+            <p>Phone :(999) 000-122-233</p>
+          </div>
+
+          <div class="footer_social_icons">
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-skype"></i></a>
+            <a href="#"><i class="fab fa-pinterest"></i></a>
+            <a href="#"><i class="fab fa-apple"></i></a>
+          </div>
 
 
-      <div class="flang_content_footer">
-        <div class="footer_circle">
-
+          <div class="flang_content_footer">
+            <div class="footer_circle">
+              <i class="fas fa-globe"></i>
+            </div>
+            <p>123 stoke, South America, 205</p>
+          </div>
         </div>
-        <p>123 stoke, South America, 205</p>
       </div>
-    </div>
 
-    <div class="bottom_footer">
-      <p>All Rights Reserved &copy; Themexpert 2016</p>
-    </div>
+
+      <div class="bottom_footer_bacground">
+        <div class="bottom_footer">
+          <p>All Rights Reserved &copy; Themexpert 2016</p>
+        </div>
+      </div>
+
 
   </div>
+
 
 </body>
 
