--- a/Marvel/index.html
+++ b/Marvel/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Muli" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Montserrat:300,400,500,700,800,900|Muli:300,400,600,700,800,900|Poppins:400,500,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/brands.css" integrity="sha384-1KLgFVb/gHrlDGLFPgMbeedi6tQBLcWvyNUN+YKXbD7ZFbjX6BLpMDf0PJ32XJfX" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/fontawesome.css" integrity="sha384-jLuaxTTBR42U2qJ/pm4JRouHkEDHkVqH0T1nyQXn1mZ7Snycpf6Rl25VBNthU4z0" crossorigin="anonymous">
@@ -26,6 +26,7 @@
         </form>
       </div>
     </div>
+    </div>
     <div class="header_menu_background">
       <div class="header_menu">
         <img class="header-logo" src="img/logo_header_menu.png" alt="MARVEL logo" />
@@ -40,7 +41,7 @@
         </ul>
       </div>
     </div>
-  </div>
+
 
   <div class="first_content">
     <div class="page_about">
@@ -56,6 +57,7 @@
       <div class="first_c_text_block">
         <i class="fas fa-star-half-alt"></i>
         <h6>Responsive Design</h6>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitelquam. Fusce quis nulla tincidunt interdum magna vitae.</p>
       </div>
       <div class="first_c_text_block">
         <i class="fas fa-globe"></i>
@@ -65,6 +67,7 @@
       <div class="first_c_text_block">
         <i class="fab fa-cloudscale"></i>
         <h6>Powerful Security</h6>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitelquam. Fusce quis nulla tincidunt interdum magna vitae.</p>
       </div>
     </div>
     <div class="first_block_statistics">
@@ -223,15 +226,150 @@
       </div>
     </div>
 
-    <div class="fouth_photos_block">
-      <img class="people photo" src="img/fifth_photos_1.png" alt="people photo" />
-      <img class="people photo" src="img/fifth_photos_2.png" alt="people photo" />
-      <img class="people photo" src="img/fifth_photos_3.png" alt="people photo" />
-      <img class="people photo" src="img/fifth_photos_4.png" alt="people photo" />
-      <img class="people photo" src="img/fifth_photos_5.png" alt="people photo" />
-      <img class="people photo" src="img/fifth_photos_6.png" alt="people photo" />
-      <img class="people photo" src="img/fifth_photos_7.png" alt="people photo" />
-      <img class="people photo" src="img/fifth_photos_8.png" alt="people photo" />
+    <div class="fifth_photos_block">
+      <div class="container_to_photos_block">
+        <img class="people photo" src="img/fifth_photos_1.png" alt="people photo" />
+        <div class="text_hover_to_photos_block">
+          <div class="icons_to_photo_block">
+            <div class="icon_circle">
+              <i class="fas fa-link"></i>
+            </div>
+            <div class="icon_circle">
+              <i class="fas fa-search"></i>
+            </div>
+          </div>
+          <div class="text_to_photo_block">
+              <h6>Fullwidth Slideshow</h6>
+              <p> - Fasion</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container_to_photos_block">
+        <img class="people photo" src="img/fifth_photos_2.png" alt="people photo" />
+        <div class="text_hover_to_photos_block">
+          <div class="icons_to_photo_block">
+            <div class="icon_circle">
+              <i class="fas fa-link"></i>
+            </div>
+            <div class="icon_circle">
+              <i class="fas fa-search"></i>
+            </div>
+          </div>
+          <div class="text_to_photo_block">
+              <h6>Fullwidth Slideshow</h6>
+              <p> - Fasion</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container_to_photos_block">
+        <img class="people photo" src="img/fifth_photos_3.png" alt="people photo" />
+        <div class="text_hover_to_photos_block">
+          <div class="icons_to_photo_block">
+            <div class="icon_circle">
+              <i class="fas fa-link"></i>
+            </div>
+            <div class="icon_circle">
+              <i class="fas fa-search"></i>
+            </div>
+          </div>
+          <div class="text_to_photo_block">
+              <h6>Fullwidth Slideshow</h6>
+              <p> - Fasion</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container_to_photos_block">
+        <img class="people photo" src="img/fifth_photos_4.png" alt="people photo" />
+        <div class="text_hover_to_photos_block">
+          <div class="icons_to_photo_block">
+            <div class="icon_circle">
+              <i class="fas fa-link"></i>
+            </div>
+            <div class="icon_circle">
+              <i class="fas fa-search"></i>
+            </div>
+          </div>
+          <div class="text_to_photo_block">
+              <h6>Fullwidth Slideshow</h6>
+              <p> - Fasion</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container_to_photos_block">
+        <img class="people photo" src="img/fifth_photos_5.png" alt="people photo" />
+        <div class="text_hover_to_photos_block">
+          <div class="icons_to_photo_block">
+            <div class="icon_circle">
+              <i class="fas fa-link"></i>
+            </div>
+            <div class="icon_circle">
+              <i class="fas fa-search"></i>
+            </div>
+          </div>
+          <div class="text_to_photo_block">
+              <h6>Fullwidth Slideshow</h6>
+              <p> - Fasion</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container_to_photos_block">
+        <img class="people photo" src="img/fifth_photos_6.png" alt="people photo" />
+        <div class="text_hover_to_photos_block">
+          <div class="icons_to_photo_block">
+            <div class="icon_circle">
+              <i class="fas fa-link"></i>
+            </div>
+            <div class="icon_circle">
+              <i class="fas fa-search"></i>
+            </div>
+          </div>
+          <div class="text_to_photo_block">
+              <h6>Fullwidth Slideshow</h6>
+              <p> - Fasion</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container_to_photos_block">
+        <img class="people photo" src="img/fifth_photos_7.png" alt="people photo" />
+        <div class="text_hover_to_photos_block">
+          <div class="icons_to_photo_block">
+            <div class="icon_circle">
+              <i class="fas fa-link"></i>
+            </div>
+            <div class="icon_circle">
+              <i class="fas fa-search"></i>
+            </div>
+          </div>
+          <div class="text_to_photo_block">
+              <h6>Fullwidth Slideshow</h6>
+              <p> - Fasion</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container_to_photos_block">
+        <img class="people photo" src="img/fifth_photos_8.png" alt="people photo" />
+        <div class="text_hover_to_photos_block">
+          <div class="icons_to_photo_block">
+            <div class="icon_circle">
+              <i class="fas fa-link"></i>
+            </div>
+            <div class="icon_circle">
+              <i class="fas fa-search"></i>
+            </div>
+          </div>
+          <div class="text_to_photo_block">
+              <h6>Fullwidth Slideshow</h6>
+              <p> - Fasion</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -279,7 +417,7 @@
             <div class="price_per_month">
               <p>$</p>
               <p>107</p>
-              <p>/MONTH</p>
+              <p>/ MONTH</p>
             </div>
             <p>15 day free trial on all accounts</p>
           </div>
@@ -307,7 +445,7 @@
             <div class="price_per_month">
               <p>$</p>
               <p>433</p>
-              <p>/MONTH</p>
+              <p>/ MONTH</p>
             </div>
             <p>15 day free trial on all account</p>
           </div>
@@ -332,7 +470,7 @@
             <div class="price_per_month">
               <p>$</p>
               <p>1233</p>
-              <p>/MONTH</p>
+              <p>/ MONTH</p>
             </div>
             <p>15 day free trial on all acounts</p>
           </div>
@@ -364,31 +502,55 @@
         <div class="expert_block">
           <img class="expert_photo" src="img/expert-first.png" alt="expert photo" />
           <div class="text_about_expert">
-            <h6>Robert Willsom</h6>
+            <h5>Robert Willsom</h5>
             <hr>
-            <p>Web developer</p>
+            <h6>Web developer</h6>
+            <p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.</p>
+            <hr>
+            <div class="social_icons">
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-skype"></i></a>
+              <a href="#"><i class="fab fa-pinterest"></i></a>
+              <a href="#"><i class="fab fa-apple"></i></a>
+            </div>
           </div>
         </div>
         <div class="expert_block">
-          <h5>Robert Willsom</h5>
-          <h6>Web developer</h6>
-          <p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.</p>
-          <hr>
-          <div class="social_icons">
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-skype"></i></a>
-            <a href="#"><i class="fab fa-pinterest"></i></a>
-            <a href="#"><i class="fab fa-apple"></i></a>
+          <img class="expert_photo" src="img/expert-first.png" alt="expert photo" />
+          <div class="text_about_expert">
+            <h5>Robert Willsom</h5>
+            <hr>
+            <h6>Web developer</h6>
+            <p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.</p>
+            <hr>
+            <div class="social_icons">
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-skype"></i></a>
+              <a href="#"><i class="fab fa-pinterest"></i></a>
+              <a href="#"><i class="fab fa-apple"></i></a>
+            </div>
           </div>
         </div>
         <div class="expert_block">
           <img class="expert_photo" src="img/expert-second.png" alt="expert photo" />
           <div class="text_about_expert">
-            <h6>Robert Willsom</h6>
+            <h5>Robert Willsom</h5>
             <hr>
-            <p>Web developer</p>
+            <h6>Web developer</h6>
+            <p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne ilud appetere fabellas, ne quaeque nominati mea.</p>
+            <hr>
+            <div class="social_icons">
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-skype"></i></a>
+              <a href="#"><i class="fab fa-pinterest"></i></a>
+              <a href="#"><i class="fab fa-apple"></i></a>
+            </div>
           </div>
         </div>
       </div>
@@ -414,6 +576,14 @@
     <div class="news_photo_block">
       <div class="similar_news_photo_block">
         <img class="news_photo" src="img/news-first.png" alt="news photo" />
+        <div class="hover_photo-news">
+          <div class="left_hover_photo-news">
+            <p>&lt;</p>
+          </div>
+          <div class="right_hover_photo-news">
+            <p>&gt;</p>
+          </div>
+        </div>
         <div class="grey_block_under_news_photo">
           <p>23 JULY 2015</p>
         </div>
@@ -428,6 +598,14 @@
       </div>
       <div class="similar_news_photo_block">
         <img class="news_photo" src="img/news-second.png" alt="news photo" />
+        <div class="hover_photo-news">
+          <div class="left_hover_photo-news">
+            <p>&lt;</p>
+          </div>
+          <div class="right_hover_photo-news">
+            <p>&gt;</p>
+          </div>
+        </div>
         <div class="grey_block_under_news_photo">
           <p>23 JULY 2015</p>
         </div>
@@ -442,6 +620,10 @@
       </div>
       <div class="similar_news_photo_block">
         <img class="news_photo" src="img/news-third.png" alt="news photo" />
+
+        <div class="hover_news_video">
+          <p>&#9658;</p>
+        </div>
         <div class="grey_block_under_news_photo">
           <p>23 JULY 2015</p>
         </div>
@@ -457,6 +639,14 @@
       </div>
       <div class="similar_news_photo_block">
         <img class="news_photo" src="img/news-fourth.png" alt="news photo" />
+        <div class="hover_photo-news">
+          <div class="left_hover_photo-news">
+            <p>&lt;</p>
+          </div>
+          <div class="right_hover_photo-news">
+            <p>&gt;</p>
+          </div>
+        </div>
         <div class="grey_block_under_news_photo">
           <p>23 JULY 2015</p>
         </div>
